# catastrophe

./: .env  .gitignore  exhibition.py  main.py  pyproject.toml  scene.py  scene_options.default.yaml  to_file.py
assets/: topics.txt
assets/prompt_fragments/: one_off_selector_instructions.yaml
assets/prompts/: generator.txt  operator.txt
code/: archival.py  core.py  display.py  scene.py  selection.py
data/: characters.yaml  locations.yaml
data/prompt_fragments/: gps_goals.yaml  ooms_instructional_addenda.yaml  ooms_instructions.yaml  qps_questions.yaml  topics_curated.txt  topics_dimensions.txt
data/prompts/: generator.txt  generator_dimensions.txt  generator_subway.txt  gps.txt  ooms.txt  qps.txt
text_assets/: generator_prompt.txt  one_off_selector_prompt.txt  prompt_template.txt  topics.txt
