[tool.poetry]
name = "animation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
regex = "^2023.12.25"
pygame = "^2.5.2"
nanoid = "^2.0.0"
pydub = "^0.25.1"
rich = "^13.7.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
