[tool.poetry]
name = "animation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
pygame = "^2.5.2"
nanoid = "^2.0.0"
pydub = "^0.25.1"
rich = "^13.7.0"
numpy = "^1.26.2"
pedalboard = "^0.8.7"
scipy = "^1.11.4"
num2words = "^0.5.13"
asyncclick = "^8.1.7.1"
orjson = "^3.9.14"
tiktoken = "^0.6.0"
lark = "^1.1.9"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
